super mehoria do README

--- a/README
+++ b/README
@@ -1,1 +1,27 @@
-### CHUVA DE METEOROS
+
+# CHUVA DE METEOROS
+
+A proposta desse projeto é criar uma aplicação que exibe duas listas de chuvas de meteoros. São elas:
+- Chuvas que podem ser vistas hoje
+- Chuvas que podem ser vistas nos próximos 2 meses
+
+## Sobre:
+
+Ao desenvolver a aplicação foi possível aplicar os seguintes conhecimentos obtidos na trilha de JavaScript:
+
+ - Variáveis e constantes
+ - Operadores
+ - Estruturas de condição
+ - Estruturas de repetição
+ - Data
+ - Objetos
+ - Arrays
+ - Manipulação de Strings
+ - Manipulação de Arrays
+ - Manipulação de Data 
+ - Funções
+
+
+## Demonstração
+
+<img src="./assets/ChuvaMeteoros.mp4">
